--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-container">
   <!-- <h1 class="note-heading">Note Taking app</h1> -->
-  <app-task-form [selectedNote]="selectedNote"></app-task-form>
-  <app-task-list (selectedNote)="selectNote($event)"></app-task-list>
+  <div><app-task-form [selectedNote]="selectedNote"></app-task-form></div>
+  <div class="task-list">  <app-task-list (selectedNote)="selectNote($event)"></app-task-list></div>
 </div>
