--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
 .app-container{
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 95vh;
     background-color: #f1f1f1;
     color: #333;
     font-family: Arial, sans-serif;
@@ -21,4 +21,15 @@
     margin-bottom: 10px;
     margin: auto;
     width: 50%;
+}
+
+.task-list{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0;
+    margin: 0;
+    height: 60vh;
+    overflow-y: scroll;
+
 }
